vbnc/vbnc/tests/Errors/30060-19.vb
Imports System
Class T
    Const M_String As int16 = ""
End Class